--- a/kirppu/locale/en/LC_MESSAGES/django.po
+++ b/kirppu/locale/en/LC_MESSAGES/django.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-14 19:24+0300\n"
-"PO-Revision-Date: 2023-07-14 19:29+0300\n"
+"POT-Creation-Date: 2025-08-10 11:29+0300\n"
+"PO-Revision-Date: 2025-08-10 11:30+0300\n"
 "Last-Translator: Jyrki Launonen\n"
 "Language-Team: Finnish <>\n"
 "Language: fi\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 23.04.2\n"
+"X-Generator: Lokalize 25.04.3\n"
 
 msgid "View help."
 msgstr "View help."
@@ -62,10 +62,6 @@ msgstr "Move unused access code to existing Clerk."
 #, python-brace-format
 msgid "Access code set for '{0}' in '{1}'"
 msgstr "Access code set for '{0}' in '{1}'"
-
-#, python-brace-format
-msgid "Clerk {name} added into {event}."
-msgstr "Clerk {name} added into {event}."
 
 msgid "Add clerk from SSO provider"
 msgstr "Add clerk from SSO provider"
@@ -140,8 +136,14 @@ msgstr "Too many items brought, limit is %i!"
 msgid "Some box items ({}/{}) are in unexpected state."
 msgstr "Some box items ({}/{}) are in unexpected state."
 
-msgid "Only {} items of {} available for reservation."
-msgstr "Only {} items of {} available for reservation."
+#, python-brace-format
+#| msgid "Only {} items of {} available for reservation."
+msgid ""
+"Only {available} items of {requested} available for reservation in box "
+"#{box_number}: {box_name}."
+msgstr ""
+"Only {available} items of {requested} available for reservation in box "
+"#{box_number}: {box_name}."
 
 msgid "Only {} items of {} available for removal."
 msgstr "Only {} items of {} available for removal."
@@ -188,7 +190,6 @@ msgid "No compensation started!"
 msgstr "No compensation started!"
 
 #, python-brace-format
-#| msgid "Not enough money in account ({1}) to give out ({2})"
 msgid "Not enough money in account ({0}) to give out ({1})"
 msgstr "Not enough money in account ({0}) to give out ({1})"
 
@@ -245,40 +246,57 @@ msgstr "Only one option may be selected at a time."
 msgid "Text formatting"
 msgstr "Text formatting"
 
+msgid "The text is formatted with standard Markdown syntax. Quick reference:"
+msgstr "The text is formatted with standard Markdown syntax. Quick reference:"
+
 msgid ""
-"<div style=\"float: left;\">The text is formatted with standard Markdown "
-"syntax. Quick reference:<br/>\n"
-"# Heading<br/>\n"
-"## Subheading<br/>\n"
-"### Sub-subheading<br/>\n"
-"- Un-ordered list item<br/>\n"
-"1. Ordered list item<br/>\n"
-"*<em>text</em>*<br/>\n"
-"**<strong>text</strong>**<br/>\n"
-"[<em>Link title</em>](<em>https://...</em>)<br/>\n"
-"&lt;email&gt;<em>email@address.org</em>&lt;/email&gt;<br/>\n"
-"&lt;glyph <em>glyph-name</em> /&gt;<br/>\n"
+"# Heading\n"
+"## Subheading\n"
+"### Sub-subheading\n"
+"- Un-ordered list item\n"
+"1. Ordered list item\n"
+"*<em>text</em>*\n"
+"**<strong>text</strong>**\n"
+"[<em>Link title</em>](<em>https://...</em>)\n"
+"&lt;email&gt;<em>email@address.org</em>&lt;/email&gt;\n"
+"&lt;glyph <em>glyph-name</em> /&gt;\n"
 "&lt;alertbox <em>type</em>&gt;<em>alert text content</em>&lt;/alertbox&gt; "
-"Types: danger, warning, info, success<br/>\n"
+"Types: danger, warning, info, success\n"
 "&lt;itemlist /&gt;\n"
-"</div>"
+"&lt;var VAR /&gt; Pre-defined: event.name, event.start.date, event.end.date, "
+"event.homepage, registration.end.datetime, registration.end.date, "
+"registration.end.time\n"
+"&lt;if COND&gt;text&lt;/if&gt;\n"
+"&lt;if COND1&gt;text&lt;elif COND2&gt;text&lt;else&gt;text&lt;/if&gt;\n"
+"<pre style=\"padding-left: 0;\">\n"
+".. vars::\n"
+"   :VAR: VALUE\n"
+"   :VAR: VALUE\n"
+"</pre>"
 msgstr ""
-"<div style=\"float: left;\">The text is formatted with standard Markdown "
-"syntax. Quick reference:<br/>\n"
-"# Heading<br/>\n"
-"## Subheading<br/>\n"
-"### Sub-subheading<br/>\n"
-"- Un-ordered list item<br/>\n"
-"1. Ordered list item<br/>\n"
-"*<em>text</em>*<br/>\n"
-"**<strong>text</strong>**<br/>\n"
-"[<em>Link title</em>](<em>https://...</em>)<br/>\n"
-"&lt;email&gt;<em>email@address.org</em>&lt;/email&gt;<br/>\n"
-"&lt;glyph <em>glyph-name</em> /&gt;<br/>\n"
+"# Heading\n"
+"## Subheading\n"
+"### Sub-subheading\n"
+"- Un-ordered list item\n"
+"1. Ordered list item\n"
+"*<em>text</em>*\n"
+"**<strong>text</strong>**\n"
+"[<em>Link title</em>](<em>https://...</em>)\n"
+"&lt;email&gt;<em>email@address.org</em>&lt;/email&gt;\n"
+"&lt;glyph <em>glyph-name</em> /&gt;\n"
 "&lt;alertbox <em>type</em>&gt;<em>alert text content</em>&lt;/alertbox&gt; "
-"Types: danger, warning, info, success<br/>\n"
+"Types: danger, warning, info, success\n"
 "&lt;itemlist /&gt;\n"
-"</div>"
+"&lt;var VAR /&gt; Pre-defined: event.name, event.start.date, event.end.date, "
+"event.homepage, registration.end.datetime, registration.end.date, "
+"registration.end.time\n"
+"&lt;if COND&gt;text&lt;/if&gt;\n"
+"&lt;if COND1&gt;text&lt;elif COND2&gt;text&lt;else&gt;text&lt;/if&gt;\n"
+"<pre style=\"padding-left: 0;\">\n"
+".. vars::\n"
+"   :VAR: VALUE\n"
+"   :VAR: VALUE\n"
+"</pre>"
 
 msgid "Name is required."
 msgstr "Name is required."
@@ -300,6 +318,13 @@ msgstr "last name"
 
 msgid "email address"
 msgstr "email address"
+
+msgid ""
+"When set, registration is disabled even if registration end is set. If not "
+"set, registration is enabled until registration end if that is set."
+msgstr ""
+"When set, registration is disabled even if registration end is set. If not "
+"set, registration is enabled until registration end if that is set."
 
 msgid ""
 "Lisp function body that gets sold_and_compensated queryset as a global and "
@@ -542,9 +567,6 @@ msgstr "Bundles:"
 msgid "Items:"
 msgstr "Items:"
 
-msgid "10"
-msgstr "10"
-
 msgid "Type:"
 msgstr "Type:"
 
@@ -565,9 +587,6 @@ msgstr "Add box"
 
 msgid "Empty"
 msgstr "Empty"
-
-msgid "Registration is closed"
-msgstr "Registration is closed"
 
 msgid "Permanently remove the box."
 msgstr "Permanently remove the box."
@@ -590,8 +609,9 @@ msgstr "Print"
 msgid "Buyer!"
 msgstr "Buyer!"
 
-msgid "Tell this number to the clerk."
-msgstr "Tell this number to the clerk."
+#| msgid "Tell this number to the clerk."
+msgid "Note the ← number for checkout."
+msgstr "Note the ← number for checkout."
 
 #, python-format
 msgid "<span class=\"price\">%(price)s</span> / unit"
@@ -807,8 +827,6 @@ msgstr "Sum of prices:"
 msgid "Vendors:"
 msgstr "Vendors:"
 
-#| msgid ""
-#| "Values in parenthesis indicate part of the value that has been abandoned."
 msgid ""
 "Values in parenthesis indicate extra deleted items (+) and part of the value "
 "that has been abandoned (-)."
@@ -865,8 +883,33 @@ msgstr "Return to vendor statistics"
 msgid "Compensations"
 msgstr "Compensations"
 
+#, python-format
+#| msgid "New vendor"
+msgid "%%s / vendor"
+msgstr "%%s / vendor"
+
 msgid "Purchases"
 msgstr "Purchases"
+
+#, python-format
+#| msgid "Purchase"
+msgid "%%s / purchase"
+msgstr "%%s / purchase"
+
+msgid "Brought"
+msgstr "Brought"
+
+#| msgid "New vendor"
+msgid "items / vendor"
+msgstr "items / vendor"
+
+#| msgid "Brought boxes"
+msgid "Brought prices"
+msgstr "Brought prices"
+
+#, python-format
+msgid "%%s / item"
+msgstr "%%s / item"
 
 msgid "Items in boxes"
 msgstr "Items in boxes"
@@ -896,12 +939,26 @@ msgstr "Printed and deleted"
 msgid "Printed, not brought"
 msgstr "Printed, not brought"
 
-msgid "Brought"
-msgstr "Brought"
+#| msgid "Brought to event"
+msgid "Brought (with box items)"
+msgstr "Brought (with box items)"
 
 #, python-format
 msgid "%(brought)s (%(broughtOfRegistered)s%% of registered)"
 msgstr "%(brought)s (%(broughtOfRegistered)s%% of registered)"
+
+#| msgid "Items in boxes"
+msgid "Brought items in boxes"
+msgstr "Brought items in boxes"
+
+#, python-format
+#| msgid "%(brought)s (%(broughtOfRegistered)s%% of registered)"
+msgid "%(count)s (%(percent)s%% of registered)"
+msgstr "%(count)s (%(percent)s%% of registered)"
+
+#| msgid "Brought"
+msgid "Brought boxes"
+msgstr "Brought boxes"
 
 #, python-format
 msgid "%(sold)s (%(soldOfBrought)s%% of brought)"
@@ -1012,6 +1069,12 @@ msgstr "Signups"
 msgid "Current people"
 msgstr "Current people"
 
+msgid "Registration is closed"
+msgstr "Registration is closed"
+
+msgid "Event has ended"
+msgstr "Event has ended"
+
 msgid "Terms of use"
 msgstr "Terms of use"
 
@@ -1078,6 +1141,9 @@ msgstr "No registered items."
 
 msgid "Item status"
 msgstr "Item status"
+
+msgid "Home"
+msgstr "Home"
 
 msgid "Click to show"
 msgstr "Click to show"
@@ -1198,9 +1264,6 @@ msgstr "View items"
 msgid "View items (CSV)"
 msgstr "View items (CSV)"
 
-msgid "Home"
-msgstr "Home"
-
 msgid "Mobile"
 msgstr "Mobile"
 
@@ -1289,6 +1352,17 @@ msgstr "User {} not found."
 
 msgid "Username is required."
 msgstr "Username is required."
+
+#~| msgid "Items:"
+#~ msgid "Items"
+#~ msgstr "Items"
+
+#, python-brace-format
+#~ msgid "Clerk {name} added into {event}."
+#~ msgstr "Clerk {name} added into {event}."
+
+#~ msgid "10"
+#~ msgstr "10"
 
 #~ msgid "Brought while deleted"
 #~ msgstr "Brought while deleted"
